tests/fixtures/errors/exhaust_narrow_neg.z
# exhaust_narrow_neg.z -- narrowing does not leak through a copy binding:
# the copied subject requires every arm (E0036).

trio: variant {
    a: null
    b: null
    c: i64
}

main: function is {
    v: trio.a
    w: v
    match (
        w
    ) case b then {
        print "b"
    } case c then {
        print "c"
    }
}
